# LST-downscaling-to-10m-GEE

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/aoi/: aranjuez.gpkg  aranjuez_urbano_test.gpkg  majadahonda.gpkg
lst_downscaling/: __init__.py  aoi.py  cli.py  figures.py  figures_inventory_heat.py  inventory_heat.py  pipeline.py  report.py  report_inventory_heat.py
scripts/: build_heat_inventory_report.py  build_heat_report.py
tests/: test_cli.py  test_pipeline_helpers.py
